[package]
name = "rnccd"
version = "1.0.0"
authors = ["Brandon Pitman <bran@bran.land>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = "1"
serde_derive = "1"
serde_yaml = "0.9"
simple_logger = "4"
tempfile = "3"
tokio = { version = "1", features = ["full"] }